force-app/main/default/objects/Meaningful_Event__c/Meaningful_Event__c.object-meta.xml
<CustomObject>
    <description>Stores meaningful events captured during customer conversations (project milestones, preferences, concerns, intents)</description>
    <label>Meaningful Event</label>
    <nameField>
        <displayFormat>ME-{0000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meaningful Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>