force-app/main/default/objects/Meaningful_Event__c/fields/Agent_Note__c.field-meta.xml
<CustomField>
    <fullName>Agent_Note__c</fullName>
    <description>Optional note from the agent about why this event matters</description>
    <label>Agent Note</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>