force-app/main/default/objects/Meaningful_Event__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact this event is associated with</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Meaningful Events</relationshipLabel>
    <relationshipName>Meaningful_Events</relationshipName>
    <type>Lookup</type>
</CustomField>