force-app/main/default/objects/Meaningful_Event__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Brief description of the meaningful event</description>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>