force-app/main/default/objects/Meaningful_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Category of event: project-milestone, preference, concern, intent, purchase</description>
    <label>Event Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>